# Automated-Defect-Inspection-System-Using-Robotic-Arm-and-DeepLearning

./: NOTE.MD  Publication.md  README.md  draft_paper.md
old_ws/: index.html  robot-control.py
ws_arm/src/arm_controller/: CMakeLists.txt  package.xml
ws_arm/src/arm_controller/scripts/: action_server.py  i2c_bridge.py  i2c_joint.py
ws_arm/src/arm_controller/src/: controller.cpp  controller.hpp
ws_arm/src/arm_desc/: CMakeLists.txt  package.xml
ws_arm/src/arm_desc/launch/: display.launch
ws_arm/src/arm_desc/urdf/: 101-myfirst.urdf
ws_arm/src/arm_moveit/: .setup_assistant  package.xml
ws_arm/src/arm_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_names.yaml  myfirst.srdf  ompl_planning.yaml
ws_arm/src/arm_moveit/launch/: demo.launch  move_group.launch  moveit_planning_execution.launch  myfirst_moveit_controller_manager.launch.xml  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
