<package>
  <name>arm_desc</name>
  <version>0.4.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="chnghia@gmail.com">Nghia Chung</author>

  <maintainer email="chnghia@gmail.com">Nghia Chung</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
